# OniEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.h  DirectionalLight.cpp  DirectionalLight.h  GraphicsEngine.cpp  GraphicsEngine.h  Material.cpp  Material.h  Mesh.h  Object.cpp  Object.h  PointLight.cpp  PointLight.h  SGNode.cpp  SGNode.h  Scene.cpp  Scene.h  compile.bat  main.cpp  readme.md  shader.frag  shader.vert  shadow.vert  skybox.frag
shaders/: frag.spv  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  pbrfrag.spv  pbrvert.spv  shader.frag  shader.vert  shadow.vert  shadows.vert  shadows.vert.spv  shadowvert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  skyboxfrag.spv  skyboxvert.spv  vert.spv
src/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  GraphicsEngine.cpp  GraphicsEngine.h  Material.cpp  Material.h  MemoryAllocator.cpp  MemoryAllocator.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  PointLight.cpp  PointLight.h  Renderer.cpp  Renderer.h  SGNode.cpp  SGNode.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h  SpotLight.cpp  SpotLight.h
